--- a/Mith.bib
+++ b/Mith.bib
@@ -1372,6 +1372,26 @@ Literature
 
 
 
+@incollection{ArthurMachen:TheInmostLight,
+  title     = {The Inmost Light},
+  crossref  = {ArthurMachen:TheThreeImpostorsAndOtherStories},
+  pages     = {51--77},
+}
+
+@book{ArthurMachen:TheThreeImpostorsAndOtherStories,
+  author    = {Arthur Machen},
+  editor    = {S.T. Joshi},
+  title     = {The Three Impostors and other stories},
+  booktitle = {The Three Impostors and other stories},
+  year      = {2001},
+  bookyear  = {2001},
+  publisher = {Chaosium},
+}
+
+
+
+
+
 @book{StephenMarley:SpiritMirror,
   author    = {Stephen Marley},
   title     = {Spirit Mirror},
@@ -1394,28 +1414,6 @@ Literature
   series    = {Chia Black Dragon},
   volume    = {3},
   year      = {1993},
-}
-
-
-
-
-
-@incollection{MichaelMcBride:LaArmadaInvencible,
-  author    = {Michael {McBride}},
-  title     = {La Armada Invencible},
-  pages     = {89--100},
-  crossref  = {WilliamJones:HighSeasCthulhu},
-}
-
-
-
-
-
-@incollection{PaulMelniczek:Ensnared,
-  author    = {Paul Melniczek},
-  title     = {Ensnared},
-  pages     = {89--100},
-  crossref  = {WilliamJones:HighSeasCthulhu},
 }
 
 
@@ -1462,10 +1460,11 @@ Literature
 
 
 
-@book{CLMoore:TheDarkLand,
-  author    = {Catherine Lucille Moore},
-  title     = {The Dark Land},
-  series    = {Jirel of Joiry},
+@incollection{MichaelMcBride:LaArmadaInvencible,
+  author    = {Michael {McBride}},
+  title     = {La Armada Invencible},
+  pages     = {89--100},
+  crossref  = {WilliamJones:HighSeasCthulhu},
 }
 
 
@@ -1479,6 +1478,27 @@ Literature
   series    = {The Horus Heresy},
   volume    = {9},
   publisher = {Black Library},
+}
+
+
+
+
+
+@incollection{PaulMelniczek:Ensnared,
+  author    = {Paul Melniczek},
+  title     = {Ensnared},
+  pages     = {89--100},
+  crossref  = {WilliamJones:HighSeasCthulhu},
+}
+
+
+
+
+
+@book{CLMoore:TheDarkLand,
+  author    = {Catherine Lucille Moore},
+  title     = {The Dark Land},
+  series    = {Jirel of Joiry},
 }
 
 
@@ -1928,6 +1948,11 @@ Literature
   title     = {The Lord of the Rings},
   series    = {The Lord of the Rings},
   year      = {1954},
+}
+
+@book{JRRTolkien:Silmarillion,
+  author    = {J.R.R. Tolkien},
+  title     = {The Silmarillion},
 }
 
 
